# paper-intelligence

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml  tests.yml
paper_intelligence/: __init__.py  _version.py  metadata.py  server.py
paper_intelligence/tools/: __init__.py  convert.py  embed.py  index.py  search.py
paper_intelligence/utils/: __init__.py  chromadb_client.py  markdown_parser.py
tests/: __init__.py  test_integration.py  test_markdown_parser.py
